added background colors

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -27,6 +27,7 @@ export const SampleText =
 
     <ColorItem title='Gradients' colors={tokens.gradients} colorType={'image'} />
 
+    ### Semantic Colors
     <ColorItem title='Sucsess' colors={tokens.colors.sucsess} />
     <ColorItem title='Danger' colors={tokens.colors.danger} />
     <ColorItem title='Warning' colors={tokens.colors.warning} />
